--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser -->
 <body>
-<p> My name is [Jacob] </p>
+<p> My name is [Jacob stern] </p>
 </body>
 </html>
