--- a/index.html
+++ b/index.html
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>Page Title</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
-<!--- Code above this line will not be displayed on the browser -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Madison Fly Fishing</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-<p> My name is [Jacob stern] </p>
+    <header>
+        <h1>Welcome to Madison Fly Fishing</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="spots.html">Fishing Spots</a></li>
+                <li><a href="gear.html">Gear & Techniques</a></li>
+                <li><a href="community.html">Community</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Discover the Best Fly Fishing in Madison</h2>
+            <p>Explore comprehensive guides and maps to the best fly fishing spots, tailored advice on local fly patterns and gear, and connect with a community of passionate anglers.</p>
+        </section>
+        <section>
+            <h3>Featured Fishing Spot</h3>
+            <p>Description of a popular fishing spot to give visitors a taste of what's to come.</p>
+            <!-- Add an image of a fishing spot here -->
+            <img src="path-to-your-image.jpg" alt="Featured Fishing Spot" />
+        </section>
+        <section>
+            <h3>Latest Community Tips</h3>
+            <ul>
+                <li>Tip 1</li>
+                <li>Tip 2</li>
+                <li>Tip 3</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Madison Fly Fishing. All rights reserved.</p>
+    </footer>
 </body>
 </html>
