--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section>
             <h3>Featured Fishing Spot</h3>
             <p>Description of a popular fishing spot to give visitors a taste of what's to come.</p>
-            <!-- Add an image of a fishing spot here -->
+         <img src="images/your-image-file-name.jpg" alt="Description of the image">
             <img src="path-to-your-image.jpg" alt="Featured Fishing Spot" />
         </section>
         <section>
