--- a/fishingspots.html
+++ b/fishingspots.html
@@ -21,7 +21,7 @@
     <main>
         <section>
             <h2>Handpicked Fishing Spots</h2>
-            <p>We meticulously select our featured fishing spots with insights and recommendations from seasoned local fishers. These spots are well-known for their abundance of fish and beautiful scenery, providing an excellent experience for anglers of all levels. Each location has been vetted for accessibility, fish populations, and the overall quality of the fishing experience. Whether you're a local angler or visiting from out of town, you'll find the perfect spot to cast your line and enjoy the tranquility of Madison's waters.</p>
+            <p>We  select our featured fishing spots with insights and recommendations from seasoned local fishers. These spots are well-known for their abundance of fish and beautiful scenery, providing an excellent experience for anglers of all levels. Each location has been vetted for accessibility, fish populations, and the overall quality of the fishing experience. Whether you're a local angler or visiting from out of town, you'll find the perfect spot to cast your line and enjoy Madison's waters.</p>
     
         </section>
     </main>
