--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <section>
             <h3>Latest Community Tips</h3>
             <ul>
-                <li>Tip 1</li>
-                <li>Tip 2</li>
-                <li>Tip 3</li>
+                <li><strong>Tip 1: Master the Art of Reading Water</strong> - Understand water conditions and structures. Fish in riffles for oxygen-rich environments, pools for larger fish conserving energy, and runs where fast and slow water meet.</li>
+                <li><strong>Tip 2: Perfect Your Presentation</strong> - The way your fly lands and moves is crucial. For dry flies, aim for a gentle landing to mimic natural insects. With wet flies and streamers, ensure realistic movement to entice fish.</li>
+                <li><strong>Tip 3: Stay Stealthy and Patient</strong> - Fish are easily spooked by shadows and sudden movements. Approach fishing spots with care, keeping your shadow away from the water and being patient in your casts and movements.</li>
             </ul>
         </section>
     </main>
