--- a/community.html
+++ b/community.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Madison Fly Fishing</title>
+    <title>Community | Madison Fly Fishing</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Madison Fly Fishing</h1>
+        <h1>Madison Fly Fishing</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,25 +20,13 @@
     </header>
     <main>
         <section>
-            <h2>Discover the Best Fly Fishing in Madison</h2>
-            <p>Explore comprehensive guides and maps to the best fly fishing spots, tailored advice on local fly patterns and gear, and connect with a community of passionate anglers.</p>
-        </section>
-        <section>
-            <h3>Featured Fishing Spot</h3>
-            <p>Description of a popular fishing spot to give visitors a taste of what's to come.</p>
-            <img src="images/your-image-file-name.jpg" alt="Description of the image">
-            <img src="path-to-your-image.jpg" alt="Featured Fishing Spot">
-        </section>
-        <section>
-            <h3>Latest Community Tips</h3>
-            <ul>
-                <li><strong>Tip 1: Master the Art of Reading Water</strong> - Understand water conditions and structures. Fish in riffles for oxygen-rich environments, pools for larger fish conserving energy, and runs where fast and slow water meet.</li>
-                <li><strong>Tip 2: Perfect Your Presentation</strong> - The way your fly lands and moves is crucial. For dry flies, aim for a gentle landing to mimic natural insects. With wet flies and streamers, ensure realistic movement to entice fish.</li>
-                <li><strong>Tip 3: Stay Stealthy and Patient</strong> - Fish are easily spooked by shadows and sudden movements. Approach fishing spots with care, keeping your shadow away from the water and being patient in your casts and movements.</li>
-            </ul>
+            <h2>Join Our Community of Anglers</h2>
+            <p>At Madison Fly Fishing, we believe in the power of community. That's why we are working on creating a dedicated dashboard where local and visiting anglers can come together to share stories, tips, and the joys of fly fishing. Imagine a place where you can get real-time updates from the riverbank, swap fly patterns with the angler next to you, and plan your next fishing trip with those who know these waters best. This community hub will be the perfect place to connect and deepen our collective appreciation for the sport and the environment. Stay tuned for updates on this exciting development!</p>
+            <p>A great place to start is <a href="https://www.madisonflyfishing.com/" target="_blank">Madison Fly Fishing</a>.</p>
         </section>
     </main>
-    <footer>
-    </footer>
+</body>
+</html>
+
 </body>
 </html>
