--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <section>
             <h3>Featured Fishing Spot</h3>
             <p>Description of a popular fishing spot to give visitors a taste of what's to come.</p>
-            <img src="images/your-image-file-name.jpg" alt="Description of the image">
-            <img src="path-to-your-image.jpg" alt="Featured Fishing Spot">
+            <img src="images/fishing-spot.jpg" alt="Featured Fishing Spot">
         </section>
         <section>
             <h3>Latest Community Tips</h3>
@@ -42,3 +41,4 @@
     </footer>
 </body>
 </html>
+
