--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section>
             <h3>Featured Fishing Spot</h3>
             <p>Description of a popular fishing spot to give visitors a taste of what's to come.</p>
-            <img src="images/fishing-spot.jpg" alt="Featured Fishing Spot">
+            <img src="images/index.jpg" alt="Featured Fishing Spot">
         </section>
         <section>
             <h3>Latest Community Tips</h3>
