--- a/gear.html
+++ b/gear.html
@@ -22,6 +22,7 @@
         <section>
             <h2>Expert-Recommended Gear and Techniques</h2>
             <p>Having the right gear and mastering local fishing techniques are key to a successful day on the water. In collaboration with local fishing experts, we've assembled a selection of top gear choices and proven techniques specifically suited to Madison's unique fly fishing conditions. From the perfect rod and reel combo to the art of choosing the right fly, these insights will prepare you for the varied environments you'll encounter. Our guides not only cover what to use but also how to use it, ensuring you make the most of your time on the river.</p>
+             <img src="images/gear.jpg" alt="Handpicked Fishing Spots">
         </section>
     </main>
 </body>
