--- a/community.html
+++ b/community.html
@@ -23,10 +23,10 @@
             <h2>Join Our Community of Anglers</h2>
             <p>At Madison Fly Fishing, we believe in the power of community. That's why we are working on creating a dedicated dashboard where local and visiting anglers can come together to share stories, tips, and the joys of fly fishing. Imagine a place where you can get real-time updates from the riverbank, swap fly patterns with the angler next to you, and plan your next fishing trip with those who know these waters best. This community hub will be the perfect place to connect and deepen our collective appreciation for the sport and the environment. Stay tuned for updates on this exciting development!</p>
             <p>A great place to start is <a href="https://www.madisonflyfishing.com/" target="_blank">Madison Fly Fishing</a>.</p>
+            <img src="images/community.jpg" alt="Madison Fly Fishing Community">
         </section>
     </main>
-</body>
-</html>
-
+    <footer>
+    </footer>
 </body>
 </html>
