--- a/spots.html
+++ b/spots.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="fullscreen-bg"></div>
     <header>
         <h1>Madison Fly Fishing</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="spots.html">Fishing Spots</a></li>
+                <li><a href="spots.html" class="active">Fishing Spots</a></li>
                 <li><a href="gear.html">Gear & Techniques</a></li>
                 <li><a href="community.html">Community</a></li>
             </ul>
@@ -21,12 +22,9 @@
     <main>
         <section>
             <h2>Handpicked Fishing Spots</h2>
-            <p>We select our featured fishing spots with insights and recommendations from seasoned local fishers. These spots are well-known for their abundance of fish and beautiful scenery, providing an excellent experience for anglers of all levels. Each location has been vetted for accessibility, fish populations, and the overall quality of the fishing experience. Whether you're a local angler or visiting from out of town, you'll find the perfect spot to cast your line and enjoy Madison's waters.</p>     
-            <img src="images/spots.jpg" alt="Handpicked Fishing Spots">
+            <p>We select our featured fishing spots with insights and recommendations from seasoned local fishers...</p>
         </section>
     </main>
-    <footer>
-    </footer>
+
 </body>
 </html>
-
