--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </section>
         <section>
             <h3>Featured Fishing Spot</h3>
-            <p>Description of a popular fishing spot to give visitors a taste of what's to come.</p>
+            <p>B.B. Clarke Beach Park .</p>
             <img src="images/index.jpg" alt="Featured Fishing Spot">
         </section>
         <section>
