--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section>
             <h3>Featured Fishing Spot</h3>
             <p>B.B. Clarke Beach Park .</p>
-            <img src="images/index.jpg" alt="Featured Fishing Spot">
+            <img src="images/index.jpg" alt="Featured Fishing Spot Clarke Beach Park">
         </section>
         <section>
             <h3>Latest Community Tips</h3>
