--- a/spots.html
+++ b/spots.html
@@ -6,7 +6,7 @@
     <title>Madison's Best Fishing Spots</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="fishing-spots-page">
     <div class="fullscreen-bg"></div>
     <header>
         <h1>Madison Fly Fishing</h1>
@@ -22,9 +22,8 @@
     <main>
         <section>
             <h2>Handpicked Fishing Spots</h2>
-            <p>We select our featured fishing spots with insights and recommendations from seasoned local fishers...</p>
+            <p>"We select our featured fishing spots with insights and recommendations from seasoned local fishers, ensuring each location offers the best experience for anglers of all skill levels. Madison is renowned for its plentiful trout runs, offering an exceptional opportunity for fly fishing enthusiasts</p>
         </section>
     </main>
-
 </body>
 </html>
